--- a/Vocabulary/App.xaml
+++ b/Vocabulary/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Vocabulary"
-             StartupUri="Mainwindow.xaml">
+             DispatcherUnhandledException="Application_DispatcherUnhandledException"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
