--- a/Vocabulary/Settings.xaml
+++ b/Vocabulary/Settings.xaml
@@ -3,11 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Vocabulary"
         mc:Ignorable="d"
-        x:Name="WSettings" Title="Settings" Height="300" Width="300">
-    <Grid>
-        <!--<Expander Width="200" HorizontalContentAlignment="Stretch">
+        x:Name="WSettings" Title="Settings" Height="300" Width="300" >
+    
+    <!--<Grid>
+        --><!--<Expander Width="200" HorizontalContentAlignment="Stretch">
             <Expander.Header>
                 <BulletDecorator>
                     <BulletDecorator.Bullet>
@@ -34,7 +36,7 @@
             <ComboBoxItem IsSelected="True">Item 1</ComboBoxItem>
             <ComboBoxItem>Item 2</ComboBoxItem>
             <ComboBoxItem>Item 3</ComboBoxItem>
-        </ComboBox>-->
+        </ComboBox>--><!--
 
-    </Grid>
+    </Grid>-->
 </Window>
