--- a/Vocabulary/MainWindow.xaml
+++ b/Vocabulary/MainWindow.xaml
@@ -25,20 +25,12 @@
             </LinearGradientBrush>
 
         </Grid.Background>
-       
-        <ToolBar Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="70" VerticalAlignment="Top" Background="{x:Null}" FontSize="20" >
-            <DockPanel>
-                <Image  Source="/avatar.png" VerticalAlignment="Top"  />
-                <!--<Label Content="Guest" VerticalAlignment="Bottom"/>-->
-            </DockPanel>
-            <Menu>
-                <MenuItem Name="LogIn" Header="Log in" Click="LogIn_Click" />
-                <MenuItem Name="SignUp" Header="Sign up" Click="SignUp_Click"/>
-            </Menu>
-        </ToolBar>
-        <!--<Button Grid.Row="0" Grid.ColumnSpan="2" x:Name="Auto" Content="You`re on Guest profile. Click if you want to Log in" Click="Auto_Click"  FontSize="20" FontFamily="Engravers MT"  Background="{x:Null}" Foreground="#FF09278B" BorderThickness="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Top"/>-->
-        <!--<Button Grid.Row="0" Grid.Column="1" x:Name="Auto" Content="Log in" Click="Auto_Click" FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF09278B" BorderThickness="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>-->
 
+        <Button Grid.Row="0" Grid.Column="1" Click="Auto_Click" Background="{x:Null}" BorderThickness="0" HorizontalAlignment="Right" VerticalAlignment="Top">
+            <Image Source="/avatar.png" ToolTip="Log in/Sign up"/>
+                <!--<TextBlock Text="Log in/Sign up" TextWrapping="Wrap"/>-->
+        </Button>
+ 
         <Label Grid.Row="1" Grid.ColumnSpan="2" Content="My Vocabulary" FontSize="40" FontFamily="Engravers MT" Foreground="#FF1B25C0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         <Button Grid.Row="2" Grid.Column="0" x:Name="List" Content="List of My Words" Click="List_Click" FontSize="28" FontFamily="Engravers MT" Background="{x:Null}" Foreground="RoyalBlue" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
