--- a/Vocabulary/MainWindow.xaml
+++ b/Vocabulary/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Vocabulary"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        x:Name ="MainWindowWindow" Title="My Vocabulary" Height="400" Width="500" Loaded="Window_Loaded">
+        x:Name ="MainWindowWindow" Title="My Vocabulary" Height="400" Width="500">
     <Grid x:Name="mainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.5*"/>
