--- a/Vocabulary/RepeatWords.xaml
+++ b/Vocabulary/RepeatWords.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:uc="clr-namespace:Vocabulary"
         xmlns:local="clr-namespace:Vocabulary"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
@@ -10,9 +11,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
         
         <Grid.Background>
@@ -22,14 +21,9 @@
             </LinearGradientBrush>
         </Grid.Background>
 
-        <ProgressBar Name="progressBarStatus" Minimum="0" Maximum="100" Value="70"  Height="20" Background="#ffcccc" Foreground="#ffffcc" BorderBrush="{x:Null}" VerticalAlignment="Top" />
-        <TextBlock Text="{Binding ElementName=progressBarStatus, Path=Value, StringFormat={}{0:0}%}" Foreground="#FFAC750E" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top" />
-
-        <TextBlock Grid.Row="0" x:Name="textBlockEnglish" Text="Get ready!" TextWrapping="Wrap" TextAlignment="Center" FontSize="34" FontFamily="Engravers MT" Foreground="#FFCB6C0E" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-        <TextBlock Grid.Row="1" x:Name="textBlockUkrainian" Text="This is all words which you learned" TextWrapping="Wrap" TextAlignment="Center" FontSize="26" FontFamily="Engravers MT" Foreground="#FFCB9E0E" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBlock Grid.Row="2" x:Name="textBlockTranscription" Text="Press 'Next' and start repeating!" TextWrapping="Wrap" TextAlignment="Center" FontSize="24" FontFamily="Engravers MT" Foreground="#FFF47689" VerticalAlignment="Top" HorizontalAlignment="Center"/>
-
-        <Grid Grid.Row="3">
+        <uc:ShowWordUC x:Name="showWordUC" Grid.Row="0" RadioButtonChecked="RadioButton_Checked"/>
+        
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="2*" />
